Cleanup and fixes for layout

--- a/docs/stories/4.5.plan-data-table.md
+++ b/docs/stories/4.5.plan-data-table.md
@@ -1,7 +1,9 @@
 # Story 4.5: Plan Data Table & Filtering
 
+> **⚠️ SUPERSEDED BY STORY 5.4** - This story's implementation was replaced by Story 5.4 (Plan Data Table Redesign) on 2025-11-27. The original `PlanTable` component was replaced with a three-component architecture: `PlansContent`, `PlanFilterBar`, and `PlanDataTable` for better separation of concerns and enhanced filtering capabilities.
+
 ## Status
-Done
+Done (Superseded by Story 5.4)
 
 ## Story
 **As a** user,
@@ -345,14 +347,21 @@ Test Files  1 passed (1)
 
 ### Files Modified During Review
 
-- `src/components/dashboard/__tests__/PlanTable.test.tsx` - Migrated from fireEvent to userEvent API
+- `src/components/dashboard/__tests__/PlanTable.test.tsx` - Migrated from fireEvent to userEvent API (REMOVED in Story 5.4)
 - `package.json` - Added @testing-library/dom and @testing-library/user-event dependencies
+
+### Files Removed in Story 5.4 (2025-11-27)
+
+- `src/components/dashboard/PlanTable.tsx` - Replaced by PlansContent + PlanFilterBar + PlanDataTable
+- `src/components/dashboard/__tests__/PlanTable.test.tsx` - Test suite removed with component
 
 ### Gate Status
 
 Gate: **PASS** → `docs/qa/gates/4.5-plan-data-table.yml`
 
 **Rationale**: All acceptance criteria met, 21 tests passing, ready for production.
+
+**Post-Gate Note**: Component architecture improved in Story 5.4 with better separation of concerns.
 
 ### Recommended Status
 
